// Copyright 2025 AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package agntcy.identity.issuer.v1alpha1;

import "agntcy/identity-saas/core/v1alpha1/id.proto";
import "agntcy/identity-saas/core/v1alpha1/vc.proto";
import "google/protobuf/empty.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/agntcy/identity-saas/api/server/agntcy/identity-saas/issuer/v1alpha1;identity_issuer_sdk_go";

// LocalService is the service that provides LOCAL issuer operations.
service LocalService {
  // Generate a keypair in Json Web Key (JWK) format
  rpc KeyGen(google.protobuf.Empty) returns (KeyGenResponse);

  // Issue a Verifiable Credential in a specific Envelope Type
  rpc IssueVC(IssueVCRequest) returns (IssueVCResponse);
}

// Issues a Verifiable Credential in a specific Envelope Type
message IssueVCRequest {
  // ID is the identifier.
  string id = 1;

  // Content of the VC
  agntcy.identity.core.v1alpha1.CredentialContent content = 2;

  // Envelope type
  agntcy.identity.core.v1alpha1.CredentialEnvelopeType envelope_type = 3;
}

// Returns the Verifiable Credential in the requested Envelope Type
message IssueVCResponse {
  // The issued VC
  agntcy.identity.core.v1alpha1.EnvelopedCredential vc = 1;
}

// Returns the generated keypair in Json Web Key (JWK) format
message KeyGenResponse {
  // The generated keypair
  agntcy.identity.core.v1alpha1.Jwk keypair = 1;
}
